; ModuleID = '/home/carl/AnghaBench/linux/fs/ceph/extr_mds_client.c_schedule_delayed.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ceph/extr_mds_client.c_schedule_delayed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_mds_client = type { i32 }

@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ceph_mds_client*)* @schedule_delayed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @schedule_delayed(%struct.ceph_mds_client* %0) #0 {
  %2 = alloca %struct.ceph_mds_client*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.ceph_mds_client* %0, %struct.ceph_mds_client** %2, align 8
  store i32 5, i32* %3, align 4
  %5 = load i32, i32* @HZ, align 4
  %6 = load i32, i32* %3, align 4
  %7 = mul nsw i32 %5, %6
  %8 = call i32 @round_jiffies_relative(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load %struct.ceph_mds_client*, %struct.ceph_mds_client** %2, align 8
  %10 = getelementptr inbounds %struct.ceph_mds_client, %struct.ceph_mds_client* %9, i32 0, i32 0
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @schedule_delayed_work(i32* %10, i32 %11)
  ret void
}

declare dso_local i32 @round_jiffies_relative(i32) #1

declare dso_local i32 @schedule_delayed_work(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
